# Design_Patterns

./: CMakeLists.txt
src/Registry_TypeErase/: Registry_TypeErase.cpp  Registry_TypeErase_More.cpp
